syntax = "proto3";

option csharp_namespace = "ShippingService.gRPC.Server.Protos";

service Shipping {
	//Done
	rpc CreateNewShipment (GrpcNewShipmentRequest) returns (GrpcStatusResponse);
	//TODO
	rpc SetShipmentAutoUpdate (GrpcSetBoolByIdRequest) returns (GrpcStatusResponse);

	rpc GetPackageData (GrpcIdMessage) returns (GrpcPackageData);
	rpc SearchPackages (GrpcSearchPackageRequest) returns (GrpcPackageList);
	rpc RunPackageWatcherRoutineManually (GrpcIdMessage) returns (GrpcStatusResponse);
	rpc HardDeletePackage (GrpcIdMessage) returns (GrpcStatusResponse);
	rpc RunPackageWatcherRoutine (GrpcVoid) returns (GrpcStatusResponse);
	rpc GetPackageWatcherRoutineState (GrpcVoid) returns (GrpcRoutineStates);
	rpc CheckMarketplaceIdIsRegistered (GrpcStringMessage) returns (GrpcBooleanMessage);
}

// requests
message GrpcNewShipmentRequest {
	string tracking_code = 1;
	string bound_marketplace = 2;
	string marketplace_account_id = 3;
	string marketplace_sale_id = 4;
	string shipping_implementation = 5;
	bool set_auto_update = 6;
	GrpcNewPackageRequest package_data = 7;
}

message GrpcNewPackageRequest {
	string name = 1;
	int32 weight_in_grams = 2;
	int32 width_in_mm = 3;
	int32 height_in_mm = 4;
	int32 length_in_mm = 5;
	repeated string content_ids = 6;
}

message GrpcSetBoolByIdRequest {
	string id = 1;
	bool toggle = 2;
}

message GrpcSearchPackageRequest {
	string name = 1;
	string trackingCode = 2;
	string dynamicField = 3;
	GrpcBooleanSearchField delivered = 4;
	GrpcBooleanSearchField rejected = 5;
	GrpcBooleanSearchField awaitingForPickUp = 6;
	GrpcBooleanSearchField beingTransported = 7;
	GrpcBooleanSearchField posted = 8;
	GrpcPagination pagination = 9;
}

message GrpcStringMessage {
	string value = 1;
}

//responses
message GrpcStatusResponse {
	bool ok = 1;
	string message = 2;
}

message GrpcBooleanMessage {
	bool value = 1;
}

message GrpcPackageList {
	repeated GrpcPackageData data = 1;
	GrpcPagination pagination = 2;
}

// models
message GrpcPackageData {
	string id = 1;
	string saleId = 2;
	string marketplace_sale_id = 3;
	string name = 4;
	string trackingCode = 5;
	string boundPlatform = 6;
	double weight = 7;
	repeated string content = 8;
	bool isBeingWatched = 9;
	GrpcPackageStatus status = 10;
	GrpcPackageLocations locations = 11;
	GrpcPackageDates dates = 12;
	bool createdManually = 13;
	string marketplace_account_id = 14;
}

message GrpcPackageDates {
	string created_at = 1;
	string last_modified_at = 2;
	string posted_at = 3;
}

message GrpcPackageStatus {
	bool isPosted = 1;
	bool isDelivered = 2;
	bool isAwaitingForPickUp = 3;
	bool isRejected = 4;
	bool isBeingTransported = 5;
	string message = 6;
}

message GrpcPackageLocations {
	GrpcLocation currentLocation = 1;
	GrpcLocation headedToLocation = 2;
}

message GrpcLocation {
	string state = 1;
	string city = 2;
	string streetName = 3;
	string cep = 4;
	int32 streetNumber = 5;
}

message GrpcIdMessage {
	string id = 1;
}

message GrpcPagination {
	int32 offset = 1;
	int32 limit = 2;
	int64 total = 3;
}

message GrpcBooleanSearchField {
	bool isActive = 1;
	bool value = 2;
}

message GrpcVoid {

}

message GrpcRoutineStates {
	bool isInitialized = 1;
	bool isExecuting = 2;
	bool isPaused = 3;
	string lastExecutedAt = 4;
	string nextExecutionAt = 5;
}